# common

./: .ci_check_marker  .gitignore  .gitleaks.toml  .safety-project.ini  .unused_module_guard_whitelist  AGENTS.md  ANALYSIS_SUMMARY.txt  CLAUDE.md  EXCEPTION_FIX_GUIDE.md  MIGRATION_PLAN.md  Makefile  POLICY_GUARD_REFACTORING_GUIDE.md  README.md  README_ANALYSIS.md  REAL_EXAMPLES.md  SILENT_EXCEPTION_ANALYSIS.md  VIOLATIONS_REFERENCE.md  analyze_handler_patterns.py  analyze_silent_exceptions.py  categorize_violations.py  ci.txt  ci_shared.mk  handler_patterns.txt  pyproject.toml  pyrightconfig.json  requirements.txt  shared-tool-config.toml  silent_exceptions_detailed.txt  violations_by_category.txt
ci_tools/: __init__.py
config/: common_constants.json  exception_messages.json  kalshi_constants.json  logging_config.json  metar_data_sources.json  monitor_config.json  pdf_parameters.json  pdf_parameters.optimized.BTC.json  pnl_config.json  process_management_config.json  redis_config.json  redis_schema.json  stations.json  streams_config.json  test_config.json  test_constants.json  trade_analyzer_config.json  validation_constants.json  weather_display_constants.json  weather_precision_settings.json  weather_station_precision.json  websocket_config.json
docs/: README.md
scripts/: ci.sh  cleanup_old_market_fields.py  live_match_markets.py  match_display.py  match_markets.py
src/: __init__.py
src/common/: CONSOLIDATION_PATTERNS.md  README.md  _module_references.py  _module_registry.py  alert_suppression_manager.py  alerter.py  alerter_factory.py  api_response_validators.py  async_helpers.py  config_coercion.py  config_loader.py  connection_config.py  connection_helpers.py  connection_manager.py  connection_state.py  connection_state_tracker.py  constants.py  cpu_monitor.py  daily_max_state.py  dawn_reset_service.py  dependency_aware_error_filter.py  dependency_validator.py  dict_utils.py  emergency_position_manager.py  error_analyzer.py  errors.py  expiry_utils.py  function_params.py  history_tracker.py  http_utils.py  kalshi_client_mixin.py  kalshi_fees.py  kalshi_market_catalog.py  kalshi_rate_limiter.py  kalshi_request_classifier.py  logging_config.py  market_data_parser.py  market_lifecycle_monitor.py  memory_monitor.py  metadata_store.py  (+65 more)
src/common/alert_suppression_manager_helpers/: __init__.py  alert_evaluator.py  config_loader.py  context_builder.py  decision_coordinator.py  dependencies_factory.py  dependency_initializer.py  error_classifier_adapter.py  initialization_coordinator.py  state_manager.py  suppression_tracker.py  time_window_manager.py
src/common/alerter_helpers/: __init__.py  alert_formatter.py  alert_operations.py  alert_sender.py  alert_suppression_manager.py  alerter_components_builder.py  chart_batch_sender.py  chart_manager.py  chart_operations.py  command_authorization_checker.py  command_coordinator.py  command_handler_registry.py  command_handlers.py  command_queue_processor.py  command_registration.py  component_manager.py  initialization.py  initialization_coordinator.py  lifecycle_helpers.py  load_charts_sender.py  price_validation_operations.py  price_validation_tracker.py  public_api.py  telegram_delivery_manager.py  telegram_media_sender.py  telegram_message_sender.py  telegram_network_backoff_manager.py  telegram_polling_coordinator.py  telegram_polling_request_executor.py  telegram_rate_limit_handler.py  telegram_retry_after_parser.py  telegram_update_processor.py  unauthorized_command_handler.py
src/common/alerting/: __init__.py  models.py  telegram_client.py  throttle.py
src/common/alertsuppressionmanager_helpers/: __init__.py
src/common/api_response_validators_helpers/: __init__.py  event_validators.py  field_validators.py  market_validators.py  order_validators.py  series_validators.py
src/common/backoff_manager/: __init__.py  random.py
src/common/backoff_manager_helpers/: __init__.py  delay_calculator.py  retry_checker.py  state_cleaner.py  state_manager.py  status_reporter.py  types.py
src/common/backoffmanager_helpers/: __init__.py
src/common/base_connection_manager_helpers/: __init__.py  backoff_calculator.py  component_builder.py  connection_lifecycle.py  health_coordinator.py  health_monitor.py  lifecycle_helpers.py  metrics_tracker.py  notification_handler.py  notification_helpers.py  property_accessors.py  proxy_setup.py  reconnection_handler.py  retry_coordinator.py  retry_logic.py  startup_coordinator.py  state_broadcast_helper.py  state_manager.py  (+2 more)
tests/: __init__.py  conftest.py  test_alert_logger_and_tracker.py  test_kalshi_trading_attribute_resolver.py  test_memory_monitor_components.py  test_memory_monitor_imports.py  test_probability_store_parsing.py  test_redis_protocol_imports.py  test_time_utils_exports.py  test_weather_temperature_helpers.py
tests/helpers/: array_builders.py  monitor_tracker_fakes.py  process_killer_test_helper.py
tests/process_killer_helpers/: test_process_models.py  test_process_terminator.py
tests/unit/: test_alert_suppression_manager.py  test_alerter.py  test_alerter_factory.py  test_api_response_validators.py  test_async_helpers.py  test_cleanup_old_market_fields.py  test_config_loader.py  test_config_runtime.py  test_connection_helpers.py  test_connection_manager.py  test_connection_state_tracker.py  test_cpu_monitor.py  test_daily_max_state.py  test_dawn_reset_service.py  test_dependency_aware_error_filter.py  test_dependency_validator.py  test_dict_utils.py  test_emergency_position_manager.py  test_error_analyzer.py  test_errors.py  test_expiry_utils.py  test_fake_redis.py  test_function_params.py  test_health_types.py  test_history_tracker.py  test_http_utils.py  test_instrument_dataclass.py  test_kalshi_client_mixin.py  test_kalshi_fees.py  test_kalshi_market_catalog.py  test_kalshi_rate_limiter.py  test_kalshi_request_classifier.py  test_kalshi_store_full.py  test_kalshi_store_helper_functions.py  test_kalshi_trading_client.py  test_live_match_markets.py  test_log_activity_monitor.py  test_logging_config.py  test_low_coverage_helpers.py  test_market_data_models.py  (+79 more)
(+2058 files in other folders)
